--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ archives_base_name=assemble
 fabric_version=0.118.0+1.21.4
 midnightlib_version=1.6.9
 mod_menu_version=13.0.2
+acornlib_version=1.6
