--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ archives_base_name=assemble
 fabric_version=0.118.0+1.21.4
 midnightlib_version=1.6.9
 mod_menu_version=13.0.2
-acornlib_version=1.6
+acornlib_version=1.9
+cca_version=6.2.2
