--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ repositories {
 		name = "TerraformersMC"
 		url = "https://maven.terraformersmc.com/"
 	}
+
+	// CCA
+	maven {
+		name = "Ladysnake Mods"
+		url = 'https://maven.ladysnake.org/releases'
+	}
 }
 
 dependencies {
@@ -38,6 +44,11 @@ dependencies {
 	// Config
 	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}+${project.minecraft_version}-fabric"
 	modApi "com.terraformersmc:modmenu:${project.mod_menu_version}"
+
+	// CCA
+	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-world:${project.cca_version}")
 }
 
 processResources {
